# CalcGTest

./: CMakeLists.txt  README.md
tests/: tests.cpp
